# robot-navigation

./: .gitignore  README.md  environment.yaml  requirements.txt
arduino/: Test_DC_Motor_PWM.ino  general_test.cpp
arduino/Test_DC_Motor_PWM/: Test_DC_Motor_PWM.ino  _uart.cpp  _uart.h  comms.cpp  comms.h  movement.cpp  movement.h  sensor_handler.cpp  sensor_handler.h  utils.cpp  utils.h
arduino/Test_DC_Motor_PWM_2/: Test_DC_Motor_PWM_2.ino  movement.cpp
arduino/Test_ULTRASOINIC_SENSOR/: Test_ULTRASOINIC_SENSOR.ino
arduino/main/: _uart.cpp  _uart.h  comms.cpp  comms.h  main.ino  motor.cpp  motor.h  sensor.cpp  sensor.h  utils.cpp  utils.h
arduino/serial_test/: serial_test.ino
arduino/serial_test2/: serial_test2.ino
arduino/tests/Test_All_Sensors/: Test_All_Sensors.ino
arduino/tests/Test_DC_Motor_PWM_2/: Test_DC_Motor_PWM_2.ino
arduino/tests/Test_IR_SENSOR/: Test_IR_SENSOR.ino
arduino/tests/Test_ULTRASOINIC_SENSOR/: Test_ULTRASOINIC_SENSOR.ino
arduino_system/: general_test.cpp
arduino_system/main/: _uart.cpp  main.ino  motor.cpp  motor.h  sensor.cpp  utils.h
arduino_system/tests/Test_DC_Motor_PWM_2/: Test_DC_Motor_PWM_2.ino
arduino_system/tests/serial_test/: serial_test.ino
arduino_system/tests/serial_test2/: serial_test2.ino
data_collection/: .gitignore  record.py  test.py  train_test_seperate.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/my-test-package/share/my-test-package/: package.sh
install/robot_system_pkg/share/robot_system_pkg/: package.dsv  package.sh
log/: latest_build
model_training/: .gitignore  README.md  data_analysis.ipynb  eda.ipynb  main.py  nas.py  playground.ipynb  test.py  train.py  trainer.py  tune_generator.py
model_training/configs/: default.yaml
model_training/configs/CustomNet/: default.yaml
model_training/configs/CustomNetV2/CustomNetV2/: nine_adam_0.0001_0.1.yaml  one_adam_0.0001_0.2.yaml  seven_adam_0.0005_0.2.yaml  six_sgd_0.0001_0.2.yaml
model_training/configs/CustomNetV2/CustomNetV2_0/: ten_sgd_0.0001_0.1.yaml
model_training/configs/CustomNetV2/CustomNetV2_1/: six_sgd_0.0001_0.1.yaml  two_sgd_0.0005_0.2.yaml
model_training/configs/CustomNetV2/CustomNetV2_2/: eight_adam_0.0005_0.1.yaml  one_adam_0.0005_0.2.yaml  three_adam_0.0001_0.1.yaml
model_training/configs/CustomNetV2/archive/: two_adam_80.yaml
model_training/configs/CustomNetv2/: default.yaml
model_training/configs/CustomNetv2/CustomNetV2/: eight_adam_0.001_0.1.yaml  eight_adam_100.yaml  eight_sgd_0.001_0.1.yaml  eight_sgd_0.001_0.2.yaml  eight_sgd_80.yaml  five_adam_0.0001_0.1.yaml  five_rmsprop_100.yaml  nine_sgd_0.0001_0.1.yaml  nine_sgd_0.0001_0.2.yaml  nine_sgd_120.yaml  one_adam_0.001_0.2.yaml  seven_sgd_0.0001_0.1.yaml  seven_sgd_0.0005_0.2.yaml  six_adam_0.0001_0.2.yaml  six_adam_0.0005_0.1.yaml  six_adam_80.yaml  ten_rmsprop_100.yaml  ten_sgd_0.0005_0.1.yaml  two_rmsprop_120.yaml
model_training/configs/CustomNetv2/CustomNetV2_0/: eight_sgd_0.0005_0.2.yaml  six_sgd_0.0001_0.2.yaml  ten_sgd_0.0005_0.1.yaml
model_training/configs/CustomNetv2/CustomNetV2_1/: one_sgd_0.0005_0.1.yaml  six_sgd_0.0001_0.2.yaml
model_training/configs/CustomNetv2/CustomNetV2_2/: eight_sgd_0.0005_0.2.yaml  nine_sgd_0.0001_0.1.yaml  one_adam_0.0005_0.2.yaml  one_sgd_0.0005_0.1.yaml  six_adam_0.0001_0.2.yaml  six_sgd_0.0001_0.2.yaml
model_training/configs/CustomNetv2/archive/: default.yaml  eight_rmsprop_100.yaml
model_training/configs_nas/: default.yaml
model_training/dataset/: dataset.py  download.py  download_command.txt
model_training/models/: CustomNetV2.py  classification.py
model_training/notebooks/: hand_detection.ipynb  playground.ipynb
model_training/utils/: constants.py  convert_onnx.py  data_processor.py  data_split.py  logger.py  transform.py  util.py
prototype_system/: arduino_test_comms.py  calibrate_velocity.py  callibrate_rotation.py  callibration.py  constant.py  manual_command.py  python_serial_receive.py  test.py  utils.py
prototype_system/sample/: User.c  rcstate_pub_node.py
ros2_python_system/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_python_system/log/: latest_build
ros2_python_system/src/custom_interfaces/: CMakeLists.txt  package.xml
ros2_python_system/src/custom_interfaces/msg/: InferenceResult.msg  SensorStatus.msg
ros2_python_system/src/custom_interfaces/srv/: ControlMovement.srv
ros2_python_system/src/robot_system_pkg/: pyproject.toml  run_notes.txt  setup.cfg  setup.py
system/: CMakeLists.txt  client1.py  main.cpp
system/Lib/SerialComm/: SerialComm.cpp  SerialComm.h
system/Lib/Socket/: Socket.cpp  SocketClient.cpp  SocketServer.cpp  TcpSocket.h
system/Lib/Util/: Connection.cpp  Input.cpp  PostWork.cpp  SerialConnection.cpp  TcpConnection.cpp  Utils.h
system/test/: inputs.h
system/test/comms/: client1  client1.cpp  server  server.cpp  socket_class.cpp  socket_class.h  structs.cpp  test.cpp
system/test/comms/archieve/: socket_class.cpp
system/test/general/: test1.cpp  test_byte.cpp  test_mutex.cpp
system/test/inference/: main.cpp
system/test/serial/: CMakeLists.txt  SerialComms.cpp  SerialComms.h  archive.cpp  cpp_receive.cpp  main.cpp  python_serial_receive.py  recv  send  send_receive.cpp  test_receive.cpp  test_send.cpp
system/test/shared_memory/: abc  abc.cpp  test.cpp
system/test/visual/: main.cpp
system/utils/: comms.h  inputs.cpp  inputs.h  structs.h  systems.h  utils.h
system_python/: comms.py  constant.py  constants.py  main.py  python_serial_receive.py  serial_com_node.py  test.py  uart.py  utils.py
system_python/sample/: serial_com_node.py
system_python/test/: scope.py
(+110 files in other folders)
